fix: #user-actions table takes up too much space

--- a/www/ui/templates/display-entry.css
+++ b/www/ui/templates/display-entry.css
@@ -174,7 +174,7 @@
     }
 
     #user-actions {
-        width: 50cqw;
+        width: 100%;
         margin: 0 auto;
 
         text-align: center;
